force-app/main/default/objects/Bank_Details__c/Bank_Details__c.object-meta.xml
<CustomObject>
    <label>Bank Details</label>
    <nameField>
        <displayFormat>BA-{000000}</displayFormat>
        <label>Bank Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>