force-app/main/default/objects/Bank_Details__c/fields/Active_Since__c.field-meta.xml
<CustomField>
    <fullName>Active_Since__c</fullName>
    <label>Active Since</label>
    <type>Date</type>
</CustomField>