force-app/main/default/objects/Bank_Details__c/fields/Amount_of_Repayment_taken__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Repayment_taken__c</fullName>
    <label>Amount of Repayment taken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>