force-app/main/default/objects/Bank_Details__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <formula>IFSC_Code__r.Bank_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Name</label>
    <type>Text</type>
</CustomField>