force-app/main/default/objects/Bank_Details__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <formula>IFSC_Code__r.Branch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Name</label>
    <type>Text</type>
</CustomField>