force-app/main/default/objects/Bank_Details__c/fields/Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disbursement</label>
    <referenceTo>Disbursement__c</referenceTo>
    <relationshipLabel>Bank Details</relationshipLabel>
    <relationshipName>Bank_Details</relationshipName>
    <type>Lookup</type>
</CustomField>