force-app/main/default/objects/Bank_Details__c/fields/ETR_Repayment__c.field-meta.xml
<CustomField>
    <fullName>ETR_Repayment__c</fullName>
    <label>ETR Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>