force-app/main/default/objects/Bank_Details__c/fields/GTR_Repayment__c.field-meta.xml
<CustomField>
    <fullName>GTR_Repayment__c</fullName>
    <label>GTR Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>