force-app/main/default/objects/Bank_Details__c/fields/IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IFSC Code</label>
    <referenceTo>IFSC_Master__c</referenceTo>
    <relationshipLabel>Bank Details</relationshipLabel>
    <relationshipName>Bank_Details</relationshipName>
    <type>Lookup</type>
</CustomField>