force-app/main/default/objects/Bank_Details__c/fields/Institution_Id__c.field-meta.xml
<CustomField>
    <fullName>Institution_Id__c</fullName>
    <label>Institution Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>