force-app/main/default/objects/Bank_Details__c/fields/Is_Primary_Repayment_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Repayment_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Repayment Account?</label>
    <type>Checkbox</type>
</CustomField>