force-app/main/default/objects/Bank_Details__c/fields/No_of_Repayment_taken__c.field-meta.xml
<CustomField>
    <fullName>No_of_Repayment_taken__c</fullName>
    <label>No of Repayment taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>