force-app/main/default/objects/Bank_Details__c/fields/total_Repayment_taken__c.field-meta.xml
<CustomField>
    <fullName>total_Repayment_taken__c</fullName>
    <label>25% of total Repayment taken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>