force-app/main/default/objects/Bank_Details__c/recordTypes/Disbursement.recordType-meta.xml
<RecordType>
    <fullName>Disbursement</fullName>
    <active>true</active>
    <label>Disbursement</label>
</RecordType>