force-app/main/default/objects/Bank_Details__c/recordTypes/Repayment.recordType-meta.xml
<RecordType>
    <fullName>Repayment</fullName>
    <active>true</active>
    <label>Repayment</label>
</RecordType>