force-app/main/default/objects/Bank_Details__c/validationRules/Account_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNUMBER( Account_Number__c ) )
)</errorConditionFormula>
    <errorDisplayField>Account_Number__c</errorDisplayField>
    <errorMessage>Account Number accept only numeric value</errorMessage>
</ValidationRule>