force-app/main/default/objects/Bank_Details__c/validationRules/Active_Since_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Since_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Active_Since__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Active_Since__c</errorDisplayField>
    <errorMessage>Future date not allowed</errorMessage>
</ValidationRule>